@@ -32,6 +32,12 @@ Only keep the first PU per core in the input locations.
 If \fI<N>\fR is specified, keep the <N>-th instead, if any.
 PUs are ordered by physical index during this filtering.
 .TP
+\fB\-\-cpukind\fR <n>
+\fB\-\-cpukind\fR <infoname>=<infovalue>
+Only keep PUs whose CPU kind match.
+Either a single CPU kind is specified as an index,
+or the info name/value keypair will select matching kinds.
+.TP
 \fB\-\-restrict\fR <cpuset>
 Restrict the topology to the given cpuset.
 .TP
